# FAIID_RasPI5

./: .gitignore  MicArray_test.ino  README.md
include/: main.h  mic_utils.h
lib/: lib.txt
lib/FFT/: CMakeLists.txt  CompactClassificationNeuralNetwork.h  FFT.c  FFT.h  FFTImplementationCallback.c  FFTImplementationCallback.h  FFT_data.h  FFT_emxAPI.c  FFT_emxAPI.h  FFT_emxutil.c  FFT_emxutil.h  FFT_initialize.c  FFT_initialize.h  FFT_internal_types.h  FFT_rtw.mk  FFT_terminate.c  FFT_terminate.h  FFT_types.h  FormBeam.c  FormBeam.h  abs.c  abs.h  codertarget_assembly_flags.mk  delayseq.c  delayseq.h  fft1.c  fft1.h  predictClass.c  predictClass.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  sum.c  sum.h
src/: main.c  makefile  mic_utils.c
